[gd_scene load_steps=2 format=3 uid="uid://fktec81jj6g8"]

[ext_resource type="Script" path="res://UI/hotbar_item.gd" id="1_20ngk"]

[node name="HotbarItem" type="Panel"]
custom_minimum_size = Vector2(100, 100)
script = ExtResource("1_20ngk")

[node name="CenterContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="AmmoLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.695
anchor_top = 0.75
anchor_right = 0.695
anchor_bottom = 0.75
offset_left = -16.5
offset_top = -12.0
offset_right = 16.5
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "100"
scroll_active = false
drag_and_drop_selection_enabled = false

[node name="InactiveCover" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="KeyLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 50.0
offset_bottom = 46.0
theme_override_colors/default_color = Color(0.374139, 0.374139, 0.374139, 1)
text = "1"
drag_and_drop_selection_enabled = false
